Object NaN translation data objects renders lights not illuminating the scene with Cycles #51855

Closed
opened 2017-06-20 17:50:18 +02:00 by claas eicke · 7 comments

Somewhat with Blender on Mac OS I managed to create 6 NAN objects and when on a visible layer always render the scene black when only using a lamp as light.

World and mesh lights illuminate the scene.

Screen Recording:
https://drive.google.com/file/d/0Byzv_NlyKp_2T0Z1cEFFM2trNWc/view

File:
https://drive.google.com/file/d/0Byzv_NlyKp_2MWpGVEl1dHVvUUk/view

JA12 pointed out the NaN bug.
https://blenderartists.org/forum/showthread.php?432909-any-idea-why-any-new-lamp-does-not-illuminate-the-geometry

To solve it all objects that share the data (6 objects) have to be selected and the via Alt G reset. Then rendering works fine.
I have no recollection how I created this 3 piece circular pattern too or set the translation data to NaN.

Nans1.PNG

Nans.PNG

black rendering.png

Somewhat with Blender on Mac OS I managed to create 6 NAN objects and when on a visible layer always render the scene black when only using a lamp as light. World and mesh lights illuminate the scene. Screen Recording: https://drive.google.com/file/d/0Byzv_NlyKp_2T0Z1cEFFM2trNWc/view File: https://drive.google.com/file/d/0Byzv_NlyKp_2MWpGVEl1dHVvUUk/view JA12 pointed out the NaN bug. https://blenderartists.org/forum/showthread.php?432909-any-idea-why-any-new-lamp-does-not-illuminate-the-geometry To solve it all objects that share the data (6 objects) have to be selected and the via Alt G reset. Then rendering works fine. I have no recollection how I created this 3 piece circular pattern too or set the translation data to NaN. ![Nans1.PNG](https://archive.blender.org/developer/F636633/Nans1.PNG) ![Nans.PNG](https://archive.blender.org/developer/F636634/Nans.PNG) ![black rendering.png](https://archive.blender.org/developer/F636635/black_rendering.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ClaasKuhnen

Added subscriber: @ClaasKuhnen

Added subscriber: @mont29

Added subscriber: @mont29

Please always attach .blend file directly here. ;) Town House 4 Animation RAW Render issue.blend

Please always attach .blend file directly here. ;) [Town House 4 Animation RAW Render issue.blend](https://archive.blender.org/developer/F637641/Town_House_4_Animation_RAW_Render_issue.blend)

This issue was referenced by blender/cycles@a650906f34

This issue was referenced by blender/cycles@a650906f34e1179b481a1cd9ba95ce1b7c6dc710

This issue was referenced by cda24d0853

This issue was referenced by cda24d085396f694402d67841640db27a2d1bcce

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51855
No description provided.