Fix T51855: Cycles emssive objects with NaN transform break lighting.